# compile-me

NLP_example/: main.py  pyproject.toml
fast_api_example/: client.py  main.py  pyproject.toml
nuitka-test/main.dist/assets/: message.txt
nuitka-test/nuitka-test/: pyvenv.cfg
nuitka-test/src/: main.py
tkinter_example/: main.py  pyproject.toml
