[project]
name = "nlp-example"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pip>=25.2",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.14",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
